src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Assigned_Office__c</fullName>
        <formula>TEXT(Owner:User.RH_Lev_6_Office__c)</formula>
        <label>Activity Assigned Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_One_Number__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Activity One Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Org__c</fullName>
        <formula>$Organization.Name</formula>
        <label>Activity Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Create_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <inlineHelpText>This field will display the actual creation date for records from CTS/ITA Central/Salesforce. Use this field for FY 15&apos; reporting</inlineHelpText>
        <label>Actual Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>B2B_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to help during reporting for duplicate B2B meeting records</description>
        <inlineHelpText>Check this field if you want to track duplicate B2B meeting records between two organizations</inlineHelpText>
        <label>B2B Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CD_Company1__c</fullName>
        <formula>Commercial_Diplomacy_Triage__r.Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_First_Name1__c</fullName>
        <formula>Commercial_Diplomacy_Triage__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_Last_Name1__c</fullName>
        <formula>Commercial_Diplomacy_Triage__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTS_Activity_ID__c</fullName>
        <description>Legacy CTS Activity ID for data loading and validation.</description>
        <externalId>true</externalId>
        <inlineHelpText>Legacy CTS Activity ID for data loading and validation.</inlineHelpText>
        <label>CTS Activity ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTS_Org_ID__c</fullName>
        <description>Legacy CTS Org ID for data loading and validation.</description>
        <externalId>true</externalId>
        <inlineHelpText>Legacy CTS Org ID for data loading and validation.</inlineHelpText>
        <label>CTS Org ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Diplomacy_Triage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Diplomacy Triage</label>
        <referenceTo>Commercial_Diplomacy_Triage__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate + 92 )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investment_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if related to Investment Promotion</inlineHelpText>
        <label>Investment Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Office__c</fullName>
        <description>Original office</description>
        <formula>RH_Lev_6_Office__c</formula>
        <label>Original Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Lev_1_GM_All__c</fullName>
        <label>User Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Lev_2_DAS__c</fullName>
        <label>User DAS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Lev_3_Region_2__c</fullName>
        <label>User Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Lev_4_Region_1__c</fullName>
        <label>User Sub-region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Lev_5_Country__c</fullName>
        <label>User Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Lev_6_Office__c</fullName>
        <label>User Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Lev_7_Individual__c</fullName>
        <label>User Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_to_Case__c</fullName>
        <formula>IF( BEGINS(WhatId, &quot;500&quot;), True, False)</formula>
        <label>Related to Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Running_User_is_Owner__c</fullName>
        <formula>Owner:User.Id = $User.Id</formula>
        <label>Running User is Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eMenu_ID_c__c</fullName>
        <description>Legacy eMenu ID.</description>
        <label>eMenu ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eMenu_Org_Name__c</fullName>
        <label>eMenu Organization Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Completed_Tasks</fullName>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Activity_Org__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed Tasks</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>